--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -77,23 +77,28 @@
     background-color: rgba(var(--bg-color), var(--opacity))  !important;
   }
 
-  #backgroundforJeedom{
+  #backgroundforJeedom {
     width: 100%;
     height: calc(100% - 65px);
     position: fixed;
     z-index: -1;
     opacity: 0.4;
+    opacity: var(--bkg-opacity-light);
     top: 65px;
     background-size: cover;
     background-position: right bottom !important;
     background-image: var(--dashBkg-url) !important;
     background-color: transparent !important;
   }
+  #backgroundforJeedom.custom {
+    background-position: center !important;
+  }
   [data-page="equipment"] #backgroundforJeedom {
     filter: blur(var(--objectBackgroundBlur));
   }
   [data-theme*="Dark"] #backgroundforJeedom {
-    opacity : 0.6;
+    opacity: 0.6;
+    opacity: var(--bkg-opacity-dark);
   }
 
   #div_jeedomLoading {
@@ -248,6 +253,7 @@
   .ui-page-theme-a .ui-body-inherit {
     color: var(--link-color) !important;
     background-color: rgba(var(--eq-bg-color), var(--opacity)) !important;
+    backdrop-filter: blur(5px)
   }
   label {
     color: var(--link-color) !important;
@@ -499,7 +505,7 @@
   body[data-coloredcats="0"] div.eqLogic-widget .widget-name,
   body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name {
     background: transparent !important;
-    border-bottom: 1px solid var(--el-defaultColor) !important;
+    border-bottom: 1px solid rgba(var(--bg-color), var(--opacity)) !important;
   }
   body[data-coloredcats="0"] div.eqLogic-widget .widget-name > span,
   body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name  > a,
