--- a/core/themes/core2019_Legacy/mobile/core2019_Legacy.css
+++ b/core/themes/core2019_Legacy/mobile/core2019_Legacy.css
@@ -64,6 +64,18 @@ Mobile Legacy
   background-color: var(--cat-other-BtnColor) !important;
 }
 
+body[data-coloredcats="0"] div.eqLogic-widget .widget-name,
+body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name {
+  background: transparent !important;
+  border-bottom: 1px solid rgba(var(--bg-color), var(--opacity)) !important;
+}
+body[data-coloredcats="0"] div.eqLogic-widget .widget-name span,
+body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name  > a,
+body[data-coloredcats="0"] div.eqLogic-widget span.cmd.refresh > i,
+body[data-coloredcats="0"] div.eqLogic-widget > span.cmd.editOptions:after {
+  color: var(--linkHoverLight-color) !important;
+}
+
 .scenario-widget.scenario .changeScenarioState,
 .scenario-widget.scenario .changeScenarioState i {
   background-color: var(--cat-scenario-BtnColor) !important;
@@ -228,3 +240,4 @@ div.cmd-widget .slider .noUi-connects > .noUi-connect,
 div.cmd-widget .slider .noUi-handle {
   background: var(--linkHoverLight-color);
 }
+
