--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -79,24 +79,33 @@
 
   #backgroundforJeedom {
     width: 100%;
-    height: calc(100% - 65px);
-    position: fixed;
+    height: calc(100% - 50px);
     z-index: -1;
-    opacity: 0.4;
-    opacity: var(--bkg-opacity-light);
-    top: 65px;
-    background-size: cover;
-    background-position: right bottom !important;
-    background-image: var(--dashBkg-url) !important;
+    position: fixed;
     background-color: transparent !important;
   }
-  #backgroundforJeedom.custom {
+  #backgroundforJeedom > div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: var(--bkg-opacity-light);
+    background-size: cover !important;
+    background-position: right bottom !important;
+    background-repeat: no-repeat;
+  }
+  #backgroundforJeedom > #top {
+    z-index: 2;
+  }
+  #backgroundforJeedom > #bottom {
+    z-index: 1
+  }
+  #backgroundforJeedom.custom > div {
     background-position: center !important;
   }
   [data-page="equipment"] #backgroundforJeedom {
     filter: blur(var(--objectBackgroundBlur));
   }
-  [data-theme*="Dark"] #backgroundforJeedom {
+  [data-theme*="Dark"] #backgroundforJeedom > div {
     opacity: 0.6;
     opacity: var(--bkg-opacity-dark);
   }
