--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2146,7 +2146,7 @@
     margin-left: 30px ;
     padding: 6px;
     border-radius: var(--border-radius);
-    background-color: rgb(var(--eq-bg-color)) !important;
+    background-color: rgba(var(--eq-bg-color), var(--opacity)) !important;
     min-height: 28px;
   }
   #timelineContainer ul li > span.vertLine {
@@ -2213,7 +2213,7 @@
     padding-left: 50px;
     padding-right: 5px;
     border-radius: var(--border-radius) !important;
-    background: rgb(var(--eq-bg-color)) !important;
+    background: rgba(var(--eq-bg-color), var(--opacity)) !important;
   }
   #timelineContainer div.date {
     position: absolute;
