fix iOS dropdowns

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -208,8 +208,9 @@ Theme Core 2021 @Jeedom
   .dropdown > a:hover {
     background-color: rgb(var(--defaultBkg-color)) !important;
   }
-  .dropdown-menu {
-    z-index: 10 !important;
+  .open > .dropdown-menu {
+    z-index: 990 !important;
+    scrollbar-width: thin;
   }
   .dropdown-menu > li > a {
     color: var(--link-color)
