--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -3727,6 +3727,13 @@ Theme Core 2021 @Jeedom
     -ms-user-select: none;
     user-select: none;
   }
+  body[data-page="plan"] #div_mainContainer {
+    overflow: hidden !important;
+  }
+  .div_backgroundPlan {
+    height: calc(100vh - 50px) !important;
+    overflow: auto !important;
+  }
 
   .div_backgroundPlan #div_grid {
     position: absolute;
