bugfix design hscroll

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -3997,6 +3997,13 @@
   }
 
   /* design */
+  body[data-page="plan"] #div_mainContainer {
+    overflow: hidden !important;
+  }
+  .div_backgroundPlan {
+    height: calc(100vh - 50px) !important;
+    overflow: auto !important;
+  }
   .div_backgroundPlan > .div_displayObject {
     z-index: 50 !important;
     position: relative;
