--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1122,6 +1122,9 @@ Theme Core 2021 @Jeedom
   [data-type="plugin"] #div_pageContainer > div.eqLogic {
     margin-top: 5px;
   }
+  [data-type="plugin"] .eqLogicThumbnailDisplay {
+    overflow: unset !important;
+  }
   select.selectCmd {
     border: 0;
     vertical-align: middle;
