wdigets template cleaning/optim

--- a/core/template/dashboard/cmd.action.other.tmplicon.html
+++ b/core/template/dashboard/cmd.action.other.tmplicon.html
@@ -14,15 +14,7 @@
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd#id# = $('.cmd[data-cmd_id=#id#]')
-      if ('#_time_widget_#' == '1') {
-        if ('#time#' == 'date') {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'), 'date')
-        } else {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'))
-        }
-      } else {
-        cmd#id#.find('.timeCmd').parent().remove()
-      }
+      if ('#_time_widget_#' != '1') cmd#id#.find('.timeCmd').parent().remove()
 
       if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
@@ -30,6 +22,7 @@
         } else {
           cmd#id#.show()
           cmd#id#.find('.iconCmd').empty().append("#_icon_on_#")
+          if ('#_time_widget_#' == '1') jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'), '#time#')
         }
       } else if (['0', 0, 'off'].includes(_options.display_value)) {
         if (jeedom.cmd.normalizeName('#name#') == 'off') {
@@ -37,6 +30,7 @@
         } else {
           cmd#id#.show()
           cmd#id#.find('.iconCmd').empty().append("#_icon_off_#")
+          if ('#_time_widget_#' == '1') jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'), '#time#')
         }
       }
     }
