--- a/core/template/dashboard/cmd.action.other.tmplimg.html
+++ b/core/template/dashboard/cmd.action.other.tmplimg.html
@@ -14,15 +14,7 @@
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
-      if ('#_time_widget_#' == '1') {
-        if ('#time#' == 'date') {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
-        } else {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
-        }
-      } else {
-        cmd.find('.timeCmd').parent().remove()
-      }
+      if ('#_time_widget_#' != '1') cmd.find('.timeCmd').parent().remove()
 
       if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
         cmd.attr('data-state','on')
@@ -30,6 +22,7 @@
           cmd.hide()
         } else {
           cmd.show().find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
+          if ('#_time_widget_#' == '1') jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
         }
       } else if (['0', 0, 'off'].includes(_options.display_value)) {
         cmd.attr('data-state','off');
@@ -37,6 +30,7 @@
           cmd.hide()
         } else {
           cmd.show().find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
+          if ('#_time_widget_#' == '1') jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
         }
       }
 
