--- a/core/template/dashboard/cmd.action.slider.timeShutter.html
+++ b/core/template/dashboard/cmd.action.slider.timeShutter.html
@@ -54,11 +54,7 @@
 
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_uid=#uid#]')
-      if ('#time#' == 'date') {
-        jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
-      } else {
-        jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
-      }
+      jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
 
       cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
       var position = _options.display_value
