--- a/core/template/mobile/cmd.action.slider.timeShutter.html
+++ b/core/template/mobile/cmd.action.slider.timeShutter.html
@@ -38,11 +38,7 @@
 
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_uid=#uid#]')
-      if ('#time#' == 'date') {
-        jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
-      } else {
-        jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
-      }
+      jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
       var height = ((_options.display_value - #minValue#) * 100) / (#maxValue# - #minValue#)
       height = 100 - (Math.round(parseFloat(height) * 10) / 10)
       if ('#invert#' == '1') {
