--- a/core/template/mobile/cmd.info.binary.tmplicon.html
+++ b/core/template/mobile/cmd.info.binary.tmplicon.html
@@ -8,14 +8,11 @@
 		jeedom.cmd.update['#id#'] = function(_options) {
 			var cmd = $('.cmd[data-cmd_id=#id#]')
 			if ('#_time_widget_#' == '1') {
-				if ('#time#' == 'date') {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
-        } else {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
-        }
+				jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
 			} else {
 				cmd.find('.timeCmd').remove();
 			}
+
 			if (_options.display_value == '1') {
 				cmd.find('.iconCmd').empty().append("#_icon_on_#")
 			}else {
