--- a/core/template/dashboard/cmd.action.other.tmpliconline.html
+++ b/core/template/dashboard/cmd.action.other.tmpliconline.html
@@ -5,21 +5,21 @@
   <template></template>
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
-      var cmd#id# = $('.cmd[data-cmd_id=#id#]')
+      var cmd = $('.cmd[data-cmd_id=#id#]')
 
       if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
-          cmd#id#.hide()
+          cmd.hide()
         } else {
-          cmd#id#.show()
-          cmd#id#.find('.iconCmdLine').empty().append("#_icon_on_#")
+          cmd.show()
+          cmd.find('.iconCmdLine').empty().append("#_icon_on_#")
         }
       } else {
         if (jeedom.cmd.normalizeName('#name#') == 'off') {
-          cmd#id#.hide()
+          cmd.hide()
         }else{
-          cmd#id#.show()
-          cmd#id#.find('.iconCmdLine').empty().append("#_icon_off_#")
+          cmd.show()
+          cmd.find('.iconCmdLine').empty().append("#_icon_off_#")
         }
       }
     }
