--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -695,7 +695,8 @@
   body[data-coloredcats="0"] div.eqLogic-widget .widget-name > a,
   body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name  > a,
   body[data-coloredcats="0"] div.eqLogic-widget span.cmd.refresh > i,
-  body[data-coloredcats="0"] div.eqLogic-widget > span.cmd.editOptions:after {
+  body[data-coloredcats="0"] div.eqLogic-widget > span.cmd.editOptions:after,
+  body[data-coloredcats="0"] .counterReorderJeedom {
     color: var(--link-color) !important;
   }
 
