--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -915,6 +915,8 @@
   }
   .counterReorderJeedom {
     position: absolute;
+    margin-top: 3px;
+    margin-left: 3px;
     color: var(--eqTitle-color);
   }
   .editingMode {
