--- a/core/template/scenario/icon.default.html
+++ b/core/template/scenario/icon.default.html
@@ -7,7 +7,7 @@
 		}
 
 		$('.bt_chooseIcon[data-uid=#uid#]').off().on('click', function() {
-			chooseIcon(function(_icon) {
+			jeedomUtils.chooseIcon(function(_icon) {
 				$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=icon]').empty().append(_icon)
 			})
 		})
