--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1040,9 +1040,9 @@
     height: 28px;
   }
   .objectPreview > .topPreview > .name {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 300;
-    max-width: 195px;
+    max-width: calc(100% - 95px);
     width: -webkit-fill-available;
     max-height: 30px !important;
     overflow: hidden;
