--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1460,7 +1460,7 @@ a.ui-table-columntoggle-btn {
 .objectPreview > .topPreview > .name {
   font-size: 16px;
   font-weight: 300;
-  max-width: 240px;
+  max-width: calc(100% - 98px);
   max-height: 30px !important;
   overflow: hidden;
   display: inline-block;
