prevent issue with max/min value (handle by core)

--- a/core/template/dashboard/cmd.info.numeric.default.html
+++ b/core/template/dashboard/cmd.info.numeric.default.html
@@ -1,44 +1,44 @@
 <div class="cmd cmd-widget arcgauge #history#" data-type="info" data-subtype="numeric" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" title="{{Date de valeur}} : #valueDate#<br/>{{Date de collecte}} : #collectDate#" >
-  <div class="title #hide_name#">
-    <span class="cmdName">#name_display#</span>
-  </div>
-  <div class="content-sm">
-    <div class="gauge cursor #history#" data-cmd_id="#id#"></div>
-    <div class="gaugeValue" data-cmd_id="#id#"></div>
-  </div>
-  <div class="state"><strong>#state#</strong> <strong>#unite#</strong></div>
-  <div class="cmdStats #hide_history#">
-    <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
-  </div>
-  <template>
-    <div>color : rgb(20,20,20) ({{couleur de l'indicateur de valeur}})</div>
-  </template>
-  <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
-      var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
-      var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-      if (_options.display_value >= maxValue) {
-        _options.display_value = maxValue
-        var angle = 0
-      } else if (_options.display_value <= minValue) {
-        _options.display_value = minValue
-        var angle = -180
-      } else {
-        var angle = (((_options.display_value - minValue) * 180) / (maxValue - minValue)) - 180
-      }
-      cmd.find('.gaugeValue').css('transform', 'scale(0.94) rotate('+angle+'deg)')
-      cmd.find('.state strong').first().text(_options.display_value)
-    }
-
-    if (is_numeric('#state#')) {
-      jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#'})
+<div class="title #hide_name#">
+  <span class="cmdName">#name_display#</span>
+</div>
+<div class="content-sm">
+  <div class="gauge cursor #history#" data-cmd_id="#id#"></div>
+  <div class="gaugeValue" data-cmd_id="#id#"></div>
+</div>
+<div class="state"><strong>#state#</strong> <strong>#unite#</strong></div>
+<div class="cmdStats #hide_history#">
+  <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
+</div>
+<template>
+  <div>color : rgb(20,20,20) ({{couleur de l'indicateur de valeur}})</div>
+</template>
+<script>
+  jeedom.cmd.update['#id#'] = function(_options) {
+    var cmd = $('.cmd[data-cmd_id=#id#]')
+    var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+    var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+    if (_options.display_value >= maxValue) {
+      maxValue = _options.display_value
+      var angle = 0
+    } else if (_options.display_value <= minValue) {
+      minValue = _options.display_value
+      var angle = -180
     } else {
-      $('.cmd[data-cmd_uid=#uid#] .gauge').append('<center><span class="label label-danger">#state#</span></center>')
+      var angle = (((_options.display_value - minValue) * 180) / (maxValue - minValue)) - 180
     }
-
-    if ($.issetWidgetOptParam('#color#', 'color')) {
-      $('.cmd[data-cmd_id=#id#] .gaugeValue').css('border-color', '#color#')
-    }
-  </script>
+    cmd.find('.gaugeValue').css('transform', 'scale(0.94) rotate('+angle+'deg)')
+    cmd.find('.state strong').first().text(_options.display_value)
+  }
+  
+  if (is_numeric('#state#')) {
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#'})
+  } else {
+    $('.cmd[data-cmd_uid=#uid#] .gauge').append('<center><span class="label label-danger">#state#</span></center>')
+  }
+  
+  if ($.issetWidgetOptParam('#color#', 'color')) {
+    $('.cmd[data-cmd_id=#id#] .gaugeValue').css('border-color', '#color#')
+  }
+</script>
 </div>
