--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1009,6 +1009,8 @@
     left: 2px;
     height: unset !important;
     padding: 3px;
+    background: transparent !important;
+    box-shadow: none;
   }
 
   span.objectSummaryAction > i:hover {
