--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -55,8 +55,7 @@ Desktop
     margin-top: 5px;
   }
   div.cmd-widget .content-xs .slider.noUi-horizontal {
-    margin-top: 12px;
-    margin-bottom: 12px;
+    margin: 12px 5px;
   }
   div.cmd-widget .content-sm {
     height: 40px !important;
