--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1003,6 +1003,10 @@
     display: none;
   }
 
+  #div_summaryAction {
+    display: flex;
+    justify-content: center;
+  }
   #div_summaryAction div.eqLogic-widget {
     position: relative;
     top: 5px;
