Complete progress-bar class range
Add progress-bar-warning andprogress-bar-danger classes on top of progress-bar-success

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1250,6 +1250,12 @@
   .progress-bar-success {
     background-color: var(--al-success-color);
   }
+  .progress-bar-warning {
+    background-color: var(--al-warning-color);
+  }
+  .progress-bar-danger {
+    background-color: var(--al-danger-color);
+  }
 
   [data-type="plugin"] #div_pageContainer > div.eqLogic {
     margin-top: 5px;
