--- a/core/template/dashboard/cmd.action.other.tmplicon.html
+++ b/core/template/dashboard/cmd.action.other.tmplicon.html
@@ -16,7 +16,7 @@
       var cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' != '1') cmd.find('.timeCmd').parent().remove()
       
-      if (_options.display_value == '') {
+      if (String(_options.display_value).length == 0) {
 	cmd.find('.iconCmd').empty().append((jeedom.cmd.normalizeName('#name#') == 'off') ? "#_icon_off_#" : "#_icon_on_#");
       } else if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
