--- a/core/template/dashboard/cmd.info.string.default.html
+++ b/core/template/dashboard/cmd.info.string.default.html
@@ -7,7 +7,7 @@
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      cmd.find('.state').empty().append(_options.display_value)
+      cmd.find('.state').empty().append(_options.display_value+' #unite#')
       if (_options.alertLevel) {
         if (_options.alertLevel == 'warning') {
           cmd.addClass('label label-warning')
