--- a/core/template/dashboard/cmd.info.string.multiline.html
+++ b/core/template/dashboard/cmd.info.string.multiline.html
@@ -9,7 +9,7 @@
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      cmd.find('.state').empty().append(_options.display_value);
+      cmd.find('.state').empty().append(_options.display_value+' #unite#');
       if (_options.alertLevel) {
         cmd.removeClass('label label-warning label-danger')
         if (_options.alertLevel == 'warning') {
@@ -19,9 +19,9 @@
         }
       }
     }
-
+    
     jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
-
+    
     if (!isNaN(parseInt('#maxHeight#'))) {
       $('.cmd[data-cmd_id=#id#]').css('max-height',parseInt('#maxHeight#')+'px')
     }
