--- a/core/template/mobile/cmd.info.string.multiline.html
+++ b/core/template/mobile/cmd.info.string.multiline.html
@@ -6,8 +6,8 @@
     jeedom.cmd.update['#id#'] = function(_options) {
       cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title','Date de valeur : '+_options.valueDate+'<br/>Date de collecte : '+_options.collectDate)
-      cmd.find('.state').empty().append(_options.display_value)
-
+      cmd.find('.state').empty().append(_options.display_value+' #unite#')
+      
       if (_options.alertLevel) {
         if (_options.alertLevel == 'warning') {
           cmd.addClass('label-warning')
@@ -21,9 +21,9 @@
         }
       }
     }
-
+    
     jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
-
+    
     if (!isNaN(parseInt('#maxHeight#'))) {
       $('.cmd[data-cmd_id=#id#]').css('max-height', parseInt('#maxHeight#')+'px')
     }
